format synthese doc commande

--- a/app/views/pdf_commande/_articles.html.erb
+++ b/app/views/pdf_commande/_articles.html.erb
@@ -9,8 +9,8 @@
           <th class="th-doc">#</th>
           <th colspan="2" class="th-doc">articles</th>
           <th class="th-doc">quantité</th>
+          <th class="th-doc">p. u.</th>
           <th class="th-doc">prix</th>
-          <th class="th-doc">total</th>
           <th class="th-doc">caution</th>
         </tr>
       </thead>
