--- a/app/views/couleurs/_form.html.erb
+++ b/app/views/couleurs/_form.html.erb
@@ -16,6 +16,11 @@
 
       <%= custom_form_elements(form, [:nom, :text_field]) %>
 
+      <div class="input-group px-2 mb-1">
+        <%= form.label :couleur_code, class: "input-group-text" %>
+        <%= form.color_field :couleur_code, class: "form-control" %>
+      </div>
+
       <%= custom_submit_button(form) %>
 
     <% end %>
