base changement pour gestion stock des produits services

--- a/app/views/categorie_produits/_categorie_produit.html.erb
+++ b/app/views/categorie_produits/_categorie_produit.html.erb
@@ -7,6 +7,8 @@
       <%= categorie_produit.nom %>
     </p>
 
+    <%= icon_true_field_with_label("service", categorie_produit.service)  %>
+
     <p>
       <strong>Texte annonce:</strong>
       <%= categorie_produit.texte_annonce %>
@@ -16,6 +18,8 @@
       <strong>Label:</strong>
       <%= categorie_produit.label %>
     </p>
+
+
 
     <%= links_record(categorie_produit) %>  
 
