--- a/app/views/categorie_produits/_form.html.erb
+++ b/app/views/categorie_produits/_form.html.erb
@@ -14,7 +14,7 @@
     <% end %>
 
     <%= custom_form_elements(form, 
-      [:nom, :text_field], [:texte_annonce, :text_area], [:label, :text_field]) %>
+      [:nom, :text_field], [:texte_annonce, :text_area], [:label, :text_field],  [:service, :check_box]) %>
 
     <%= custom_submit_button(form) %>
 
