--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -19,7 +19,7 @@
         <%= options_supplementaires_link(type_produits_path, "fa-list-ul", "Type. produits", "btn-outline-primary") %>
 
         <%= options_supplementaires_link(couleurs_path, "fa-palette", "Couleurs", "btn-outline-dark") %>
-        <%= options_supplementaires_link(tailles_path, "fa-ruler", "Tailles", "btn-outline-dark") %>
+        <%= options_supplementaires_link(tailles_path, "fa-ruler", "Tailles", "btn-outline-secondary") %>
         <%= options_supplementaires_link(admin_parameters_path, "fa-screwdriver-wrench", "Parametres", "btn-outline-warning") %>
 
         <%# faire des regrouepents avc des menus deroulants par cat : ex parametre %>
