--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -1,13 +1,16 @@
 
 <%= bandeau_entete("Stock", "box", "", "") %>
 
-
 <div class="card mx-2 my-3 light-beige-colored shadow-sm">
   <div class="card-header fw-bold"> 
     général
   </div>
   <div class="card-body"> 
     <p> Total produits : <span class="fw-bold"> <%= total_produits(@produits) %> </span> </p> 
+    <p> Total services : <span class="fw-bold"> <%= total_services(@produits) %> </span> </p> 
+
+    <p> Total services vendus : <span class="fw-bold"> <%= articles_services_in_commandes %> </span> </p> 
+
     <p> Total loués : <span class="fw-bold"> <%= total_loues(@produits) %> </span> </p> 
     <p> Total vendus : <span class="fw-bold"> <%= total_vendus(@produits) %> </span> </p> 
     <p> Restant : <span class="fw-bold"> <%= produits_restants(@produits, Time.now.to_date) %> </span> </p> 
