--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,12 +1,12 @@
-<%= bandeau_entete("Clients", "user", @clients.count, :nom_or_prenom_cont) %>
+<%= bandeau_entete("Clients", "user", @clients.count, 
+:nom_or_prenom_cont, clients_path) %>
 
 <%= bloc_nouveau(Client) %>
 
-<div id="clients">
-  <% @clients.each do |client| %>
-        <%= render client %>
-  <% end %>
-</div>
+<%= turbo_frame_tag :results, data: {turbo_action: 'advance'} do %>
+    <div id="clients"> </div> 
 
-
-
+    <%= turbo_frame_tag :pagination, loading: :lazy, 
+                        src: clients_path(format: :turbo_stream,
+                        q: params[:q]&.to_unsafe_h) %>
+<% end %>
