--- a/app/views/commandes/_form.html.erb
+++ b/app/views/commandes/_form.html.erb
@@ -15,7 +15,7 @@
         </div>
       <% end %>
 
-      <%= custom_form_elements(form, 
+      <%#= custom_form_elements(form, 
         [:nom, :text_field] ) %>
 
       <div class="m-1">
