--- a/app/views/etiquettes/index.html.erb
+++ b/app/views/etiquettes/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Etiquettes", "tags", "", "") %>
+<%= bandeau_entete("Etiquettes", "tags", "", "", "") %>
 
 <div class="mx-2">
 
