--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,11 +1,11 @@
-<%= bandeau_entete("Profiles", "user-circle", @profiles.count, :nom_or_prenom_cont) %>
+<%= bandeau_entete("Profiles", "user-circle", @profiles.count, :nom_or_prenom_cont, profiles_path) %>
 
 <%= bloc_nouveau(Profile) %>
 
-<div id="profiles">
-  <% @profiles.each do |profile| %>
-        <%= render profile %>
-  <% end %>
-</div>
+<%= turbo_frame_tag :results, data: {turbo_action: 'advance'} do %>
+    <div id="profiles"> </div> 
 
-
+    <%= turbo_frame_tag :pagination, loading: :lazy, 
+                        src: profiles_path(format: :turbo_stream,
+                        q: params[:q]&.to_unsafe_h) %>
+<% end %>
