--- a/app/views/admin_parameters/index.html.erb
+++ b/app/views/admin_parameters/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= bandeau_entete("Paramètres admin", "screwdriver-wrench","", "") %>
+<%= bandeau_entete("Paramètres admin", "screwdriver-wrench","", "", "") %>
 
 <div class="container-fluid text-end">
   
