--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <% if user_signed_in? %>
     <% if current_user.admin? %>
 
-        <%= bandeau_entete("Comptes", "users", "", "") %>
+        <%= bandeau_entete("Comptes", "users", "", "", "") %>
 
         <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
             <div class="mx-2">
