--- a/app/views/ensembles/show.html.erb
+++ b/app/views/ensembles/show.html.erb
@@ -1,1 +1,7 @@
+<%= card_main_model("Ensemble", "cubes") %>
+
 <%= render @ensemble %>
+
+<hr>
+
+<%= return_model_index_button("Retour vers Ensembles", ensembles_path) %>
