--- a/app/views/tailles/index.html.erb
+++ b/app/views/tailles/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("tailles", "paint", @tailles.count, :nom_cont, tailles_path) %>
+<%= bandeau_entete("Tailles", "palette", @tailles.count, :nom_cont, tailles_path) %>
 
 <%= bloc_nouveau(Taille) %>
 
