--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -3,7 +3,7 @@
   <div class="card mx-2 mb-3 p-3 light-beige-colored shadow-sm">
     
     <div class="row">
-      <div class="col-10">
+      <div data-turbo="false" class="col-10">
         <%= link_to commande_path(commande), class: "text-decoration-none text-dark" do %>
 
           <%= custom_badge("", "", "primary", commande.ref_commande) %>
