--- a/app/views/couleurs/index.html.erb
+++ b/app/views/couleurs/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Couleurs", "paint", @couleurs.count, 
+<%= bandeau_entete("Couleurs", "palette", @couleurs.count, 
         :nom_cont, couleurs_path) %>
 
 <%= bloc_nouveau(Couleur) %>
