--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -2,15 +2,17 @@
   <div class="card mx-2 mb-3 light-beige-colored shadow-sm">
     <div class="card-body p-0">
       <div class="row g-0">
-        <div class="col-4">
+        <div data-turbo="false" class="col-4">
           <%= link_to image_tag(produit.default_image, class: "img-produit"), produit_path(produit)  %>
         </div>
         <div class="col-8 d-flex flex-column p-4">
           <h5 class="card-title">
             <%= produit.nom %>
-            <%= link_to "", "#collapseProduit#{dom_id(produit)}", 
+            <div data-turbo="false">
+              <%= link_to "", "#collapseProduit#{dom_id(produit)}", 
                     class: "btn btn-sm btn-outline-primary fa-solid fa-eye m-1", "data-bs-toggle": "collapse", 
                     role: "button", "aria-expanded": "false", "aria-controls": "collapseProduit#{dom_id(produit)}" %>
+            </div>
           </h5>
 
             <p>
