--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -31,7 +31,7 @@
         
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Scan QR code commande</h5>
+                <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Scan QR code</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
