remise qr code reader - format custom badge

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,6 +47,9 @@
    background-color: var(--light-beige-color);
 }
 
+.lighter-beige-colored {
+  background-color: #f4f4f4; 
+}
 
 .card-connexion{
    width: 90%;
