--- a/app/views/avoir_rembs/_avoir_remb.html.erb
+++ b/app/views/avoir_rembs/_avoir_remb.html.erb
@@ -19,7 +19,7 @@
             <%= avoir_remb.nature %>            
           <% end %>
 
-          <%= link_to "", "#collapseAvoir_remb#{dom_id(avoir_remb)}", class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseAvoir_remb#{dom_id(avoir_remb)}" %>
+          <%= link_to "", "#collapseAvoir_remb#{dom_id(avoir_remb)}", class: "btn btn-sm btn-outline-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseAvoir_remb#{dom_id(avoir_remb)}" %>
 
         </div>
 
