--- a/app/views/paiement_recus/_paiement_recu.html.erb
+++ b/app/views/paiement_recus/_paiement_recu.html.erb
@@ -10,7 +10,7 @@
         <%= "par #{paiement_recu.moyen}" if paiement_recu.moyen.present? %>
 
         <%= link_to "", "#collapsePaiementRecu#{dom_id(paiement_recu)}", 
-              class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
+              class: "btn btn-sm btn-outline-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
               role: "button", "aria-expanded": "false", "aria-controls": "collapsePaiementRecu#{dom_id(paiement_recu)}" %>
       </div>
 
