--- a/app/views/etiquettes/edition.html.erb
+++ b/app/views/etiquettes/edition.html.erb
@@ -36,10 +36,10 @@
                         <%= produit.taille&.nom %>
                       </span>
 
-                    <br>
+                    <hr>
 
                       <% same_produit_same_couleur_others_tailles(produit).each do |produit| %>
-                        <span class="my-2"> 
+                        <span class="p-1" style="color: grey; border: 2px solid grey; border-radius: 10px;"> 
                           <%= produit.taille.nom if produit.taille&.nom %>
                         </span>
                       <% end %>
@@ -57,12 +57,11 @@
                       <div class="" style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: <%= produit.couleur.couleur_code %>"></div>
                     </span>
 
-                    <br>
-
+                    <hr>
 
                     <% same_produit_same_taille_others_couleurs(produit).each do |produit| %>
                       
-                      <span class="text-dark p-1" style=""> 
+                      <span class="text-secondary p-1" style="color: grey; border: 2px solid grey; border-radius: 10px;"> 
                         <span> <%= produit.couleur&.nom %> </span> 
                         <div class="" style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: <%= produit.couleur.couleur_code %>"></div>
                       </span>
